# chipwhisperer

./: .gitignore  .gitignore.orig  .gitmodules  .readthedocs.yaml  CHANGES.txt  FW_CHANGES.txt  KNOWNBUGS.txt  KNOWNISSUES.txt  LICENSE.txt  README.md  TODO.txt  contributing.md  contributing.rst  cw_openocd.cfg  esp_prog.py  gen_minimal.sh  requirements.txt  setup.py
.github/workflows/: build_firmware.yml  lint_python.yml  periodic_test.yml  publish-to-test-pypi.yml  test_notebooks.yml  update_minimal.yml  update_private.yml
betas/avrtarget/: avrtarget.brd  avrtarget.sch  eagle.epf
betas/cw506_eagleproj/: cw506_advbreak.brd  cw506_advbreak.sch
betas/discriminator/: discrim.brd  discrim.sch  eagle.epf
doc/: Makefile  api.rst  conf.py  index.rst  installing.rst  make.bat  prerequisites.rst
doc/_templates/: project.html
doc/api/: project-format.rst  project.rst  scope-cwnano.rst  scope-openadc.rst  scope.rst  target-simpleserial.rst  target.rst
doc/contributing/: documentation.rst  guide.rst  todo.rst
doc/images/: cw_banner.ai  cw_logo.ai
doc/information/: contributing.rst
doc/installing/: linux-manual.rst  mac-manual.rst  repository-install.rst  virtual-machine.rst  windows-installer.rst  windows-manual.rst
doc/source/: conf.py  index.rst
doc/sphinx/: .conf.py.swp  .nfs000000000146fc3900000008  Makefile  background.rst  chipwhisperer.analyzer.attacks.cpa_algorithms.rst  chipwhisperer.analyzer.attacks.models.rst  chipwhisperer.analyzer.attacks.profiling_algorithms.rst  chipwhisperer.analyzer.attacks.rst  chipwhisperer.analyzer.models.aes.rst  chipwhisperer.analyzer.models.rst  chipwhisperer.analyzer.preprocessing.rst  chipwhisperer.analyzer.rst  chipwhisperer.analyzer.scripts.rst  chipwhisperer.analyzer.ui.rst  chipwhisperer.analyzer.utils.TraceExplorerScripts.rst  chipwhisperer.analyzer.utils.rst  chipwhisperer.capture.acq_patterns.rst  chipwhisperer.capture.api.rst  chipwhisperer.capture.auxiliary.rst  chipwhisperer.capture.rst  chipwhisperer.capture.scopes.cwhardware.rst  chipwhisperer.capture.scopes.openadc_interface.rst  chipwhisperer.capture.scopes.rst  chipwhisperer.capture.scopes.visascope_interface.rst  chipwhisperer.capture.scripts.rst  chipwhisperer.capture.targets.rst  chipwhisperer.capture.targets.simpleserial_readers.rst  chipwhisperer.capture.targets.smartcard_protocols.rst  chipwhisperer.capture.targets.smartcard_readers.rst  chipwhisperer.capture.ui.rst  chipwhisperer.capture.utils.rst  chipwhisperer.common.api.rst  chipwhisperer.common.results.rst  chipwhisperer.common.rst  chipwhisperer.common.scripts.rst  chipwhisperer.common.traces.rst  chipwhisperer.common.ui.rst  chipwhisperer.common.utils.rst  chipwhisperer.hardware.naeusb.rst  chipwhisperer.hardware.rst  (+71 more)
doc/sphinx_sources/: sad-diagram.vsd  triggerrouting.vsd
doc/uml/: cw_classdiagram.pyns
docs/: analyzer-api.rst  api.rst  capture-api.rst  changes.rst  conf.py  contributing.rst  custom-firmware.rst  debugging.rst  drivers.rst  firmware.rst  getting-started.rst  index.rst  installing.rst  linux-install.rst  logging.rst  mac-install.rst  prerequisites.rst  requirements.txt  scope-api.rst  simpleserial.rst  starting.rst  target-api.rst  tutorials.rst  virtual-box-inst.rst  windows-install.rst
docs/_static/: backup.css  custom.css  layout.html
docs/_templates/: about_short.html  custom.css  testtoc.html
docs/information/: changes.rst  contributing.rst
docs/tutorials/: README.md  README.rst
firmware/fpgas/: README.md
hardware/: 50-newae.rules  99-newae.rules
hardware/usb_drivers/: INSTALL.txt
hardware/victims/firmware/hal/fe310/freedom-metal-201908/: .gitignore  .gitmodules  Makefile.am  aclocal.m4  build.wake  configure  configure.ac
hardware/victims/firmware/hal/fe310/freedom-metal-201908/.github/: CODEOWNERS
hardware/victims/firmware/hal/fe310/freedom-metal-201908/doc/sphinx/: conf.py
hardware/victims/firmware/hal/fe310/freedom-metal-201908/doc/sphinx/apiref/: rtc.rst  watchdog.rst
hardware/victims/firmware/hal/fe310/freedom-metal-201908/doc/sphinx/devguide/: exceptions.rst  interrupts.rst
hardware/victims/firmware/hal/fe310/freedom-metal-201908/dts/: e31-arty.dts  e31-eval.dts  qemu-sifive_e-32.dts
hardware/victims/firmware/hal/fe310/freedom-metal-201908/metal/: machine.h
hardware/victims/firmware/hal/fe310/freedom-metal-201908/metal/machine/: inline.h  platform.h
hardware/victims/firmware/hal/fe310/freedom-metal-201908/scripts/: autoconf_wrapper
hardware/victims/firmware/hal/fe310/freedom-metal-201908/src/: time.c  tty.c
hardware/victims/firmware/hal/fe310/freedom-metal-201908/src/drivers/: riscv_clint0.c
hardware/victims/firmware/hal/fe310/freedom-metal-201908/test/: hello.c  return_fail.c
jupyter/: Fault_1-Introduction_to_Clock_Glitch_Attacks.ipynb  Fault_2-Introduction_to_Vcc_Glitch_Attacks.ipynb  Fault_3-Glitch_Buffer_Attacks.ipynb  Fault_4-AES_Differential_Fault_Analysis_Attacks.ipynb  Fault_5-RSA_Fault_Attack.ipynb  PA_CPA_1-Using_CW-Analyzer_for_CPA_Attack.ipynb  PA_CPA_2-Manual_CPA_Attack.ipynb  PA_CPA_3-Resynchronizing_Data_Traces.ipynb  PA_CPA_4-Hardware_Crypto_Attack.ipynb  PA_CPA_5-32bit_AES.ipynb  PA_DPA_1-Hamming_Weight_Measurement.ipynb  PA_DPA_2-Large_HW_Swings.ipynb  PA_DPA_3-AES_DPA_Attack.ipynb  PA_HW_CW305.ipynb  PA_Intro_1-Firmware_Build_Setup.ipynb  PA_Intro_2-Instruction_Differences.ipynb  PA_Intro_3-Measuring_SNR_of_Target.ipynb  PA_Multi_1-Breaking_AES-256_Bootloader.ipynb  PA_Profiling_1_Template_Attacks_HW_Assumption.ipynb  PA_SPA_1-Timing_Analysis_with_Power_for_Password_Bypass.ipynb  PA_TVLA_1-Performing_TVLA_Testing_for_Crypto_Validation.ipynb  README.md  Test_Notebook.ipynb  Test_Notebook.py
openocd/: cw_openocd.cfg  fe310.cfg  rp2040.cfg  run_openocd.sh
software/: CWAnalyzer.pyw  CWCapture.pyw  README.md  example_aescap.py  requirements.txt  setup.py
test/: test_api.py  test_project.py
tests/: conftest.py  pytest.ini  simple_serial_demo.py  test_api.py  test_batchrun.py  test_firmware_update.py  test_fw_build.sh  test_husky.py  test_husky_stream.py  test_s6.py  test_s6_glitch.py  update_fw.py
(+5907 files in other folders)
